Finalise outline of sessions 1-3

--- a/Workshop 1 - Athens/Adv1_Theory.Rmd
+++ b/Workshop 1 - Athens/Adv1_Theory.Rmd
@@ -708,6 +708,8 @@ curve(dbeta(x, 240.03, 12.63), from=0, to=1)
 
 ## Summary
 
+TODO
+
 ```{r cleanup, include=FALSE}
 unlink('basicjags.bug')
 unlink('basicjags2.bug')
