--- a/Workshop 1 - Athens/Adv4_Covariates.Rmd
+++ b/Workshop 1 - Athens/Adv4_Covariates.Rmd
@@ -58,7 +58,7 @@ We looked at a GLM-type formulation of this model yesterday:
 glmhw_definition <- "model{
 
   for(i in 1:N){
-    Status ~ dcat(prob[i, ])
+    Status[i] ~ dcat(prob[i, ])
   
 	  prob[i,1] <- (prev[i] * ((1-se[1])*(1-se[2]))) + 
 	              ((1-prev[i]) * ((sp[1])*(sp[2])))
@@ -77,12 +77,12 @@ glmhw_definition <- "model{
   for(p in 2:Pops){
     population_effect[p] ~ dnorm(0, 0.1)
   }
-  se[1] ~ dbeta(HPSe[1,1], HPSe[1,2])T(1-sp[1], )
-  sp[1] ~ dbeta(HPSp[1,1], HPSp[1,2])
-  se[2] ~ dbeta(HPSe[2,1], HPSe[2,2])T(1-sp[2], )
-  sp[2] ~ dbeta(HPSp[2,1], HPSp[2,2])
+  se[1] ~ dbeta(1, 1)T(1-sp[1], )
+  sp[1] ~ dbeta(1, 1)
+  se[2] ~ dbeta(1, 1)T(1-sp[2], )
+  sp[2] ~ dbeta(1, 1)
 
-  #data# Status, N, Population, Pops, HPSe, HPSp
+  #data# Status, N, Population, Pops
   #monitor# intercept, population_effect, se, sp
   #inits# intercept, population_effect, se, sp
 }
@@ -122,9 +122,9 @@ simdata <- data.frame(
   )
 simdata$logitprob <- with(simdata, int + pop_eff[Population] + sex_eff[Sex] + age_eff*Age)
 
-simdata$status <- rbinom(N, 1, plogis(simdata$logitprob))
-simdata$Test1 <- rbinom(N, 1, (simdata$status * se1) + ((1-simdata$status) * (1-sp1)))
-simdata$Test2 <- rbinom(N, 1, (simdata$status * se2) + ((1-simdata$status) * (1-sp2)))
+simdata$truestatus <- rbinom(N, 1, plogis(simdata$logitprob))
+simdata$Test1 <- rbinom(N, 1, (simdata$truestatus * se1) + ((1-simdata$truestatus) * (1-sp1)))
+simdata$Test2 <- rbinom(N, 1, (simdata$truestatus * se2) + ((1-simdata$truestatus) * (1-sp2)))
   
 head(simdata)
 ```
@@ -138,7 +138,7 @@ We can cheat a bit and use template.jags to help set up part of the model:
 simdata$Population <- factor(simdata$Population, levels=seq_along(pop_eff), labels=paste0('Pop_', seq_along(pop_eff)))
 simdata$Sex <- factor(simdata$Sex, levels=seq_along(sex_eff), labels=c('female','male'))
 
-runjags::template.jags(status ~ Population + Sex + Age, data=simdata, file='glmtemplate.bug', family='binomial', effect.prior = 'dnorm(0, 0.1)', write.data=FALSE)
+runjags::template.jags(truestatus ~ Population + Sex + Age, data=simdata, file='glmtemplate.bug', family='binomial', effect.prior = 'dnorm(0, 0.1)', write.data=FALSE)
 ```
 
 The lines you need from this auto-generated model are #17:
@@ -175,7 +175,7 @@ cat(readLines('glmtemplate.bug')[45:57], sep='\n')
 
 ---
 
-Combine the two models, add initial values for se and sp, and also add a `#data# N, Status, Age, Population, Sex´ block, and modify the priors for test1 se/sp.
+Combine the two models, add initial values for se and sp, and also add a `#data# N, Status, Age, Population, Sex´ block, and modify the priors for test1 se/sp as estimated from session 1.
 
 ```{r echo=FALSE}
 if(!params$presentation) cat(readLines('HW_GLM_coefs.bug'), sep='\n')
